<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lbl_usuario"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:fontFamily="sans-serif"
        android:text="@string/usuario"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_Usuario"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/et_correo"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/lbl_password"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:text="@string/password"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_Password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/et_clave"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tooltipText="Registro"
            app:srcCompat="@drawable/ic_register" />

        <ImageButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_login_24" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_task_image">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="363dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/AdminTarea"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>