<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ufide.proyecto.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_addTareaFragment"
            app:destination="@id/addTareaFragment" />
        <action
            android:id="@+id/action_nav_home_to_addTareaFragment2"
            app:destination="@id/addTareaFragment" />
        <action
            android:id="@+id/action_nav_home_to_updateLugarFragment"
            app:destination="@id/updateLugarFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.ufide.proyecto.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.ufide.proyecto.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addTareaFragment"
        android:name="com.ufide.proyecto.ui.home.AddTareaFragment"
        android:label="fragment_add_tarea"
        tools:layout="@layout/fragment_add_tarea" >
        <action
            android:id="@+id/action_addTareaFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_addTareaFragment_to_nav_home2"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/updateLugarFragment"
        android:name="com.ufide.proyecto.ui.home.UpdateTareaFragment"
        android:label="fragment_update_lugar"
        tools:layout="@layout/fragment_update_tarea" >
        <action
            android:id="@+id/action_updateTareaFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <argument
            android:name="tareaArg"
            app:argType="com.ufide.proyecto.model.Tarea" />
    </fragment>
</navigation>